# actix-web-posts-api

./: Cargo.toml  docker-compose-test.yaml  docker-compose.yaml
migrations/2022-07-30-153312_create_articles_table/: up.sql
src/: main.rs  models.rs
src/actors/: db.rs
