[package]
name = "posts-server"
version = "1.0.0"
authors = ["Kudret Davudov <bordobereli435@gmail.com>"]
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.6.5", features = ["v4", "serde"] }
diesel = { version = "1.4.8", features = ["uuid", "r2d2", "postgres"] }
diesel_migrations = "1.4.0"